@@ -6165,6 +6165,8 @@ accessors are defined:
 
 \fun{GEN}{F2xqX_divrem}{GEN x, GEN y, GEN T, GEN *pr}
 
+\fun{GEN}{F2xqX_extgcd}{GEN x, GEN y, GEN T, GEN *ptu, GEN *ptv}
+
 \fun{GEN}{F2xqX_gcd}{GEN x, GEN y, GEN T}
 
 \fun{GEN}{F2xqX_F2xqXQ_eval}{GEN Q, GEN x, GEN S, GEN T} as
