@@ -270,6 +270,7 @@ BA  105- [libpari] F2x_get_red, get_F2x_mod, get_F2x_var, get_F2x_degree,
     106- [libpari] vecmoduu, quadclassno, mkfracss, sstoQ, Qtoss
     107- [libpari] znchar_quad
 VD  108- [libpari] closure_func_err
+BA  109- [libpari] F2xqX_extgcd
 
   Changed
       1- rewrite bnfnarrow
